// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c5 *[fill^='#'] {
  fill: #626F84;
}

.c5.c5[data-disabled] {
  pointer-events: none;
  fill: #A7B0BE;
}

.c5:not([data-disabled]):hover {
  cursor: pointer;
}

.c5:not([data-disabled]):hover *[fill^='#'] {
  fill: #0A54C2;
}

.c2 {
  white-space: nowrap;
  position: relative;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  border: 0;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: 'VTB Group UI',sans-serif;
  box-sizing: border-box;
  border-radius: 4px;
  height: inherit;
  cursor: pointer;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
}

.c4 > * {
  display: block;
  width: 24px;
  height: 24px;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c1 {
  cursor: pointer;
  background: #FFFFFF;
  position: relative;
  border-radius: 4px;
  height: 38px;
  border-color: #8A96A8;
  border-width: 1px;
  border-style: solid;
}

[data-focus-within] .c0,
.c1:focus {
  border-color: #0949AA;
}

.c1:hover {
  border-color: #0A54C2;
}

.c1:focus {
  outline: none;
}

.c1:active {
  outline: none;
}

[data-status='success'] .c0 {
  border-color: #2ABB5B;
}

[data-status='error'] .c0 {
  border-color: #DA0B20;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  position: relative;
  height: 32px;
  padding-right: 46px;
  pointer-events: none;
}

<body>
    <div>
      <div
        class="c0 c1"
        tabindex="0"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c5"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c5 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c5 *[fill^='#'] {
  fill: #626F84;
}

.c5.c5[data-disabled] {
  pointer-events: none;
  fill: #A7B0BE;
}

.c5:not([data-disabled]):hover {
  cursor: pointer;
}

.c5:not([data-disabled]):hover *[fill^='#'] {
  fill: #0A54C2;
}

.c2 {
  white-space: nowrap;
  position: relative;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  border: 0;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: 'VTB Group UI',sans-serif;
  box-sizing: border-box;
  border-radius: 4px;
  height: inherit;
  cursor: pointer;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
}

.c4 > * {
  display: block;
  width: 24px;
  height: 24px;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c1 {
  cursor: pointer;
  background: #FFFFFF;
  position: relative;
  border-radius: 4px;
  height: 38px;
  border-color: #8A96A8;
  border-width: 1px;
  border-style: solid;
}

[data-focus-within] .c0,
.c1:focus {
  border-color: #0949AA;
}

.c1:hover {
  border-color: #0A54C2;
}

.c1:focus {
  outline: none;
}

.c1:active {
  outline: none;
}

[data-status='success'] .c0 {
  border-color: #2ABB5B;
}

[data-status='error'] .c0 {
  border-color: #DA0B20;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  position: relative;
  height: 32px;
  padding-right: 46px;
  pointer-events: none;
}

<div>
    <div
      class="c0 c1"
      tabindex="0"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <div
          class="c4"
        >
          <div
            aria-hidden="true"
            class="c5"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelect should render small components 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c5 *[fill^='#'] {
  fill: #626F84;
}

.c5.c5[data-disabled] {
  pointer-events: none;
  fill: #A7B0BE;
}

.c5:not([data-disabled]):hover {
  cursor: pointer;
}

.c5:not([data-disabled]):hover *[fill^='#'] {
  fill: #0A54C2;
}

.c2 {
  white-space: nowrap;
  position: relative;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  border: 0;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 12px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: 'VTB Group UI',sans-serif;
  box-sizing: border-box;
  border-radius: 4px;
  height: inherit;
  cursor: pointer;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
}

.c4 > * {
  display: block;
  width: 20px;
  height: 20px;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c1 {
  cursor: pointer;
  background: #FFFFFF;
  position: relative;
  border-radius: 4px;
  height: 30px;
  border-color: #8A96A8;
  border-width: 1px;
  border-style: solid;
}

[data-focus-within] .c0,
.c1:focus {
  border-color: #0949AA;
}

.c1:hover {
  border-color: #0A54C2;
}

.c1:focus {
  outline: none;
}

.c1:active {
  outline: none;
}

[data-status='success'] .c0 {
  border-color: #2ABB5B;
}

[data-status='error'] .c0 {
  border-color: #DA0B20;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  position: relative;
  height: 32px;
  padding-right: 46px;
  pointer-events: none;
}

<body>
    <div>
      <div
        class="c0 c1"
        tabindex="0"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c5"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c5 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c5 *[fill^='#'] {
  fill: #626F84;
}

.c5.c5[data-disabled] {
  pointer-events: none;
  fill: #A7B0BE;
}

.c5:not([data-disabled]):hover {
  cursor: pointer;
}

.c5:not([data-disabled]):hover *[fill^='#'] {
  fill: #0A54C2;
}

.c2 {
  white-space: nowrap;
  position: relative;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  border: 0;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 12px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: 'VTB Group UI',sans-serif;
  box-sizing: border-box;
  border-radius: 4px;
  height: inherit;
  cursor: pointer;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 10px;
}

.c4 > * {
  display: block;
  width: 20px;
  height: 20px;
}

.c4 > *:not(:first-child) {
  margin-left: 8px;
}

.c1 {
  cursor: pointer;
  background: #FFFFFF;
  position: relative;
  border-radius: 4px;
  height: 30px;
  border-color: #8A96A8;
  border-width: 1px;
  border-style: solid;
}

[data-focus-within] .c0,
.c1:focus {
  border-color: #0949AA;
}

.c1:hover {
  border-color: #0A54C2;
}

.c1:focus {
  outline: none;
}

.c1:active {
  outline: none;
}

[data-status='success'] .c0 {
  border-color: #2ABB5B;
}

[data-status='error'] .c0 {
  border-color: #DA0B20;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  position: relative;
  height: 32px;
  padding-right: 46px;
  pointer-events: none;
}

<div>
    <div
      class="c0 c1"
      tabindex="0"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <div
          class="c4"
        >
          <div
            aria-hidden="true"
            class="c5"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
